--- a/public/_gatsby/slices/_gatsby-scripts-1.html
+++ b/public/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-afd33b17a7609ebef2f0.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-188b3147158455d45397.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-d8b37f8e0d674b9e87e2.js\"],\"component---src-pages-about-js\":[\"/component---src-pages-about-js-f313297994276d5372b1.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-0c84bcf21f9eeac04c67.js\"],\"component---src-pages-projects-js\":[\"/component---src-pages-projects-js-fbb5c46f3f5215522bc4.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="d9e9f4617e559461fa6c";</script><script src="/webpack-runtime-935755dc2b77f410521a.js" async></script><script src="/framework-2ce0f657b3e8e7a4afcd.js" async></script><script src="/app-afd33b17a7609ebef2f0.js" async></script>
+        <script>window.___webpackCompilationHash="ea6c854e94904cbbe8fb";</script><script src="/webpack-runtime-2fc76511446a5c75c5aa.js" async></script><script src="/framework-2ce0f657b3e8e7a4afcd.js" async></script><script src="/app-d8b37f8e0d674b9e87e2.js" async></script>
